<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/background"
    tools:context="com.arun.quotesapp.MainActivity">

    <!-- Share Button -->

    <TextView
        android:id="@+id/quote_tv"
        android:layout_width="wrap_content"
        android:layout_height="331dp"
        android:layout_weight="6"
        android:gravity="center"
        android:text="@string/instruction_text"
        android:textAlignment="center"
        android:textColor="@color/dark_charcoal"
        android:textSize="22sp"
        tools:ignore="InefficientWeight" />

    <Button
        android:id="@+id/next_quote_btn"
        android:layout_width="391dp"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:text="@string/display_quote"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/share_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:text="@string/share_quotes"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <!-- Search Button -->
    <Button
        android:id="@+id/search_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:text="@string/search"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/favorite_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:text="@string/add_favorites"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize,TextContrastCheck" />

    <Button
        android:id="@+id/view_favorites_btn"
        android:layout_width="399dp"
        android:layout_height="56dp"
        android:layout_marginTop="10dp"
        android:background="@color/black"
        android:text="@string/view_favorites"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="VisualLintButtonSize,VisualLintBounds,TextContrastCheck" />

</LinearLayout>
